# complexion

./: .gitignore  README.md  pyproject.toml
demo/: demo.py
src/complexion/: __init__.py  __main__.py  analyzer.py  chart.py  cli.py  fitting.py  generators.py  measure.py  models.py  regression.py
tests/: test_analyzer.py  test_chart.py  test_cli.py  test_fitting.py  test_generators.py  test_measure.py  test_models.py  test_regression.py
