[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "complexion"
version = "0.1.0"
description = "Empirical algorithmic complexity analyzer"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
complexion = "complexion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
